# conciliador_bancario

./: .bandit.yml  .bumpversion.cfg  .gitignore  .pip-audit-ignore.txt  .semgrep.yml  AGENTS.md  BOUNDARY_CHECKLIST.md  CHANGELOG.md  GLOSARIO.md  README.md  RELEASING.md  RUNBOOK.md  mvp_checklist.md  pyproject.toml  requirements-dev.txt  requirements.txt  walkthrough.md
.github/: FUNDING.yml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml
.pypi_smoke/: pyvenv.cfg
.pypi_smoke/Scripts/: activate  activate.bat
docs/: agregar_formato.md  contract_run_json.md  guia_contadores.md  guia_tecnica.md  migration_report.md  premium_architecture.md  premium_licensing.md  premium_roadmap.md  ux_contracts.md  workspace_boundaries.md
docs/diagrams/: RENDERING.md  conciliador_architecture.puml
docs/diagrams/c4-plantuml/: UPSTREAM.md
examples/: banco_ejemplo.csv  banco_ejemplo.xml  config_cliente.yaml  movimientos_esperados.csv
src/bankrecon/: __init__.py
src/conciliador_bancario/: __init__.py  cli.py  errors.py  models.py  pipeline.py  version.py
src/conciliador_bancario/audit/: audit_log.py
src/conciliador_bancario/cli/: __init__.py  app.py  errors.py
src/conciliador_bancario/core/contracts/: __init__.py
src/conciliador_bancario/core/premium_contracts/: __init__.py  contracts.py  run_json.py
src/conciliador_bancario/ingestion/: base.py  csv_adapter.py  detector.py  limits.py  pdf_ocr_adapter.py  pdf_text_adapter.py  xlsx_adapter.py  xml_adapter.py
src/conciliador_bancario/matching/: engine.py
src/conciliador_bancario/normalization/: __init__.py  normalizer.py
src/conciliador_bancario/reporting/: __init__.py  excel_report.py
src/conciliador_bancario/templates/: cartola_banco.csv  config_cliente.yaml  movimientos_esperados.csv
src/conciliador_bancario/utils/: hashing.py  masking.py  parsing.py
src/conciliador_core/: __init__.py
src/conciliador_core/contracts/: __init__.py  run_json_codec.py  run_schema.py
src/conciliador_core/premium_contracts/: __init__.py  contracts.py  run_json.py
tests/: test_audit_contract.py  test_cli_error_boundary.py  test_contract_run_json_schema.py  test_e2e_cli.py  test_golden_datasets.py  test_golden_examples.py  test_ingestion_pdf_ocr.py  test_ingestion_pdf_text.py  test_ingestion_resource_limits.py  test_ingestion_xlsx_multisheet.py  test_ingestion_xml.py  test_invalid_inputs_fail_closed.py  test_matching_policy.py  test_models_contracts.py  test_normalization.py  test_parsing.py  test_phase1_scaffold.py  test_property_parsing.py  test_reporting_security.py  test_ux_contracts_cli.py  test_workspace_boundaries.py
tests/golden/: README.md  csv_sucio_run.json  examples_run.json  pdf_ocr_run.json  pdf_text_run.json  xlsx_sucio_run.json  xml_ok_run.json
tests/golden/datasets/csv/: banco_sucio.csv  esperados_sucio.csv
tests/golden/datasets/pdf_ocr/: esperados.csv
tests/golden/datasets/xlsx/: banco_multisheet_sucio.xlsx  esperados_sucio.xlsx
tests/golden/datasets/xml/: cartola_invalida.xml  cartola_ok.xml
tools/: bump_changelog.py  check_boundaries.py  pip_audit_gate.py  secret_scan.py  verify_release_tag.py
