[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "bankrecon"
description = "CLI local para conciliacion bancaria (Chile-first) con auditoria y enfoque fail-closed."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Conciliador Bancario Contributors" }]
keywords = ["conciliacion", "bancaria", "chile", "contabilidad", "cli"]
dynamic = ["version"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/cortega26/conciliador_bancario", "Repository" = "https://github.com/cortega26/conciliador_bancario", "Issues" = "https://github.com/cortega26/conciliador_bancario/issues", "Changelog" = "https://github.com/cortega26/conciliador_bancario/blob/main/CHANGELOG.md" }
dependencies = [
  "pydantic==2.7.4",
  "typer==0.12.3",
  "click==8.1.7",
  "rich==13.7.1",
  "PyYAML==6.0.1",
  "openpyxl==3.1.2",
  "pypdf==6.6.2",
  "defusedxml==0.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "hypothesis==6.108.4",
  "ruff==0.4.10",
  "black==24.10.0",
  "bandit==1.7.8",
  "pip-audit==2.10.0",
  "build==1.2.2",
  "twine==5.1.1",
  "bump2version==1.0.1",
  "mypy==1.10.0",
  "types-PyYAML==6.0.12.20240808",
]
pdf_ocr = [
  # Requiere dependencias de sistema (poppler) para convertir PDF->imagenes.
  "pdf2image==1.17.0",
  "pytesseract==0.3.10",
  "Pillow==10.4.0",
]

[project.scripts]
concilia = "conciliador_bancario.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/conciliador_bancario", "src/bankrecon"]
include = [
  "src/conciliador_bancario/templates/*.yaml",
  "src/conciliador_bancario/templates/*.csv",
]

[tool.hatch.version]
path = "src/conciliador_bancario/version.py"

[tool.hatch.build]
exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  # openpyxl triggers a deprecation warning on Python 3.12; keep tests signal-focused.
  "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:openpyxl\\.packaging\\.core",
  "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated.*:DeprecationWarning:openpyxl\\.writer\\.excel",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # Black-compatible: don't fight long literals/URLs. Black doesn't reflow strings.
  "E501",
  # Small refactor suggestion with no practical benefit here.
  "UP038",
]

[tool.ruff.lint.per-file-ignores]
# Typer encourages Option(...) in defaults; this is intentional for CLI ergonomics.
"src/conciliador_bancario/cli/app.py" = ["B008", "UP007"]
# Tests sometimes intentionally assert broad exceptions for contract/fail-closed behaviour.
"tests/**/*.py" = ["B017"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
